// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/NavItem As Link 1`] = `
<span
  data-css-ruxays=""
>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
  >
    <a
      data-css-167upi1=""
      href="https://duckduckgo.com"
      onClick={[Function]}
    >
      <span
        data-css-50rv4t=""
      >
        <span
          data-css-1c3u483=""
        >
          Item Text
        </span>
      </span>
    </a>
  </div>
  <div
    data-css-1pig4yn=""
  />
</span>
`;

exports[`Storyshots Components/NavItem Basic 1`] = `
<span
  data-css-ruxays=""
>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
  >
    <button
      data-css-167upi1=""
      onClick={[Function]}
    >
      <span
        data-css-50rv4t=""
      >
        <span
          data-css-1c3u483=""
        >
          Item Text
        </span>
      </span>
    </button>
  </div>
  <div
    data-css-1pig4yn=""
  />
</span>
`;

exports[`Storyshots Components/NavItem Horizontal 1`] = `
<span
  data-css-ruxays=""
>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
  >
    <button
      data-css-167upi1=""
      onClick={[Function]}
    >
      <span
        data-css-50rv4t=""
      >
        <span
          data-css-1c3u483=""
        >
          Item Text
        </span>
      </span>
    </button>
  </div>
  <div
    data-css-1pig4yn=""
  />
</span>
`;

exports[`Storyshots Components/NavItem Horizontal As Link 1`] = `
<span
  data-css-ruxays=""
>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
  >
    <a
      data-css-167upi1=""
      href="https://duckduckgo.com"
      onClick={[Function]}
    >
      <span
        data-css-50rv4t=""
      >
        <span
          data-css-1c3u483=""
        >
          Item Text
        </span>
      </span>
    </a>
  </div>
  <div
    data-css-1pig4yn=""
  />
</span>
`;

exports[`Storyshots Components/NavItem Horizontal As Link With Icon 1`] = `
<span
  data-css-ruxays=""
>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
  >
    <a
      data-css-167upi1=""
      href="https://duckduckgo.com"
      onClick={[Function]}
    >
      <span
        data-css-50rv4t=""
      >
        <span
          data-css-1o9ctb7=""
        >
          <div
            className="psds-icon psds-icon--size-medium"
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
        </span>
        <span
          data-css-1c3u483=""
        >
          Item Text
        </span>
      </span>
    </a>
  </div>
  <div
    data-css-1pig4yn=""
  />
</span>
`;

exports[`Storyshots Components/NavItem Horizontal Selected 1`] = `
<span
  data-css-ruxays=""
>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
  >
    <button
      data-css-8y1zv3=""
      onClick={[Function]}
    >
      <span
        data-css-50rv4t=""
      >
        <span
          data-css-1o9ctb7=""
        >
          <div
            className="psds-icon psds-icon--size-medium"
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
        </span>
        <span
          data-css-1c3u483=""
        >
          Item Text
        </span>
      </span>
    </button>
  </div>
  <div
    data-css-1qafynz=""
  />
</span>
`;

exports[`Storyshots Components/NavItem Horizontal With Icon 1`] = `
<span
  data-css-ruxays=""
>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
  >
    <button
      data-css-167upi1=""
      onClick={[Function]}
    >
      <span
        data-css-50rv4t=""
      >
        <span
          data-css-1o9ctb7=""
        >
          <div
            className="psds-icon psds-icon--size-medium"
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
        </span>
        <span
          data-css-1c3u483=""
        >
          Item Text
        </span>
      </span>
    </button>
  </div>
  <div
    data-css-1pig4yn=""
  />
</span>
`;

exports[`Storyshots Components/NavItem Horizontal With Menu 1`] = `
<span
  data-css-ruxays=""
>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
  >
    <button
      data-css-167upi1=""
      onClick={[Function]}
    >
      <span
        data-css-5vea0s=""
      >
        <span
          data-css-1o9ctb7=""
        >
          <div
            className="psds-icon psds-icon--size-medium"
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
        </span>
        <span
          data-css-1c3u483=""
        >
          Item Text
        </span>
        <span
          data-css-1cbyl54=""
        >
          <div
            className="psds-icon psds-icon--size-small"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </span>
      </span>
    </button>
  </div>
  <div
    data-css-1pig4yn=""
  />
</span>
`;

exports[`Storyshots Components/NavItem Selected Flow Item 1`] = `
<span
  data-css-ruxays=""
>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
  >
    <button
      data-css-8y1zv3=""
      onClick={[Function]}
    >
      <span
        data-css-50rv4t=""
      >
        <span
          data-css-1o9ctb7=""
        >
          <div
            className="psds-icon psds-icon--size-medium"
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
        </span>
        <span
          data-css-1c3u483=""
        >
          Item Text
        </span>
      </span>
    </button>
  </div>
  <div
    data-css-vihy3f=""
  />
</span>
`;

exports[`Storyshots Components/NavItem Selected Skills Item 1`] = `
<span
  data-css-ruxays=""
>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
  >
    <button
      data-css-8y1zv3=""
      onClick={[Function]}
    >
      <span
        data-css-50rv4t=""
      >
        <span
          data-css-1o9ctb7=""
        >
          <div
            className="psds-icon psds-icon--size-medium"
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
        </span>
        <span
          data-css-1c3u483=""
        >
          Item Text
        </span>
      </span>
    </button>
  </div>
  <div
    data-css-1qzypeb=""
  />
</span>
`;

exports[`Storyshots Components/NavItem Vertical 1`] = `
<span
  data-css-1ccmf7q=""
>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
  >
    <button
      data-css-167upi1=""
      onClick={[Function]}
    >
      <span
        data-css-ie8n0y=""
      >
        <span
          data-css-1442w2z=""
        >
          Item Text
        </span>
      </span>
    </button>
  </div>
  <div
    data-css-14bdu2c=""
  />
</span>
`;

exports[`Storyshots Components/NavItem Vertical As Link 1`] = `
<span
  data-css-1ccmf7q=""
>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
  >
    <a
      data-css-167upi1=""
      href="https://duckduckgo.com"
      onClick={[Function]}
    >
      <span
        data-css-ie8n0y=""
      >
        <span
          data-css-1442w2z=""
        >
          Item Text
        </span>
      </span>
    </a>
  </div>
  <div
    data-css-14bdu2c=""
  />
</span>
`;

exports[`Storyshots Components/NavItem Vertical As Link With Icon 1`] = `
<span
  data-css-1ccmf7q=""
>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
  >
    <a
      data-css-167upi1=""
      href="https://duckduckgo.com"
      onClick={[Function]}
    >
      <span
        data-css-ie8n0y=""
      >
        <span
          data-css-1nd5vjz=""
        >
          <div
            className="psds-icon psds-icon--size-medium"
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
        </span>
        <span
          data-css-1442w2z=""
        >
          Item Text
        </span>
      </span>
    </a>
  </div>
  <div
    data-css-14bdu2c=""
  />
</span>
`;

exports[`Storyshots Components/NavItem Vertical Selected 1`] = `
<span
  data-css-1ccmf7q=""
>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
  >
    <button
      data-css-8y1zv3=""
      onClick={[Function]}
    >
      <span
        data-css-ie8n0y=""
      >
        <span
          data-css-1nd5vjz=""
        >
          <div
            className="psds-icon psds-icon--size-medium"
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
        </span>
        <span
          data-css-1442w2z=""
        >
          Item Text
        </span>
      </span>
    </button>
  </div>
  <div
    data-css-pdnvm8=""
  />
</span>
`;

exports[`Storyshots Components/NavItem Vertical With Icon 1`] = `
<span
  data-css-1ccmf7q=""
>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
  >
    <button
      data-css-167upi1=""
      onClick={[Function]}
    >
      <span
        data-css-ie8n0y=""
      >
        <span
          data-css-1nd5vjz=""
        >
          <div
            className="psds-icon psds-icon--size-medium"
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
        </span>
        <span
          data-css-1442w2z=""
        >
          Item Text
        </span>
      </span>
    </button>
  </div>
  <div
    data-css-14bdu2c=""
  />
</span>
`;

exports[`Storyshots Components/NavItem Vertical With Menu 1`] = `
<span
  data-css-1ccmf7q=""
>
  <div
    className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
  >
    <button
      data-css-167upi1=""
      onClick={[Function]}
    >
      <span
        data-css-ie8n0y=""
      >
        <span
          data-css-1nd5vjz=""
        >
          <div
            className="psds-icon psds-icon--size-medium"
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
        </span>
        <span
          data-css-1442w2z=""
        >
          Item Text
        </span>
        <span
          data-css-mz08e=""
        >
          <div
            className="psds-icon psds-icon--size-small"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
              />
            </svg>
          </div>
        </span>
      </span>
    </button>
  </div>
  <div
    data-css-14bdu2c=""
  />
</span>
`;

exports[`Storyshots Components/NavItem With Action Menu 1`] = `
<div>
  <span
    data-css-ruxays=""
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
    >
      <button
        data-css-167upi1=""
        onClick={[Function]}
      >
        <span
          data-css-5vea0s=""
        >
          <span
            data-css-1o9ctb7=""
          >
            <div
              className="psds-icon psds-icon--size-medium"
            >
              <svg
                aria-label="home icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  clipRule="evenodd"
                  d="M21 13.417l.989.988a.5.5 0 00.707 0l.707-.708a.5.5 0 000-.707L12.353 1.954a.5.5 0 00-.707 0L.61 12.99a.5.5 0 000 .707l.707.707a.5.5 0 00.707 0L3 13.428v7.573a1 1 0 001 1h5a1 1 0 001-1v-4a2 2 0 114 0v4a1 1 0 001 1h5a1 1 0 001-1v-7.584zM5 11.428l7-7 7 6.991v8.582h-3v-3a4 4 0 10-8 0v3H5v-8.573z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </span>
          <span
            data-css-1c3u483=""
          >
            menu open 
            false
          </span>
          <span
            data-css-1cbyl54=""
          >
            <div
              className="psds-icon psds-icon--size-small"
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </span>
        </span>
      </button>
    </div>
    <div
      data-css-1pig4yn=""
    />
  </span>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
</div>
`;
